Use Java 8 and 11 language features where possible